--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:pro": "docker-compose -f docker/pro/docker-compose.yml up --force-recreate --build"
+    "docker:pro": "docker-compose -f docker/pro/docker-compose.yml up --force-recreate --build",
+    "docker:local": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml  up --force-recreate --build"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
