--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   bnext-contact-book-api:
     build: 
       dockerfile: docker/local/dockerfile
+    ports: 
+      - 9229:9229  
     volumes: 
       - ../../src:/opt/bnext/contact-book-api/src
       - ../../node_modules:/opt/bnext/contact-book-api/node_modules
