--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:pro": "docker-compose -f docker/pro/docker-compose.yml up --force-recreate --build",
-    "docker:local": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml  up --force-recreate --build"
+    "test:e2e": "jest --config test/jest-e2e.json --watchAll",
+    "docker:pro": "docker-compose -f docker/pro/docker-compose.yml up",
+    "docker:local": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml  up",
+    "docker:test": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml -f docker/test/docker-compose.yml up"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
