--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config test/jest-e2e.json --watchAll",
     "docker:pro": "docker-compose -f docker/pro/docker-compose.yml up",
-    "docker:local": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml  up",
-    "docker:test": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml -f docker/test/docker-compose.yml up"
+    "docker:local": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml --env-file docker/local/.env  up",
+    "docker:test": "docker-compose -f docker/pro/docker-compose.yml -f docker/local/docker-compose.yml -f docker/test/docker-compose.yml --env-file docker/local/.env up"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
@@ -39,6 +41,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
