--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports: 
       - 9229:9229  
     volumes: 
+      - ../../dist:/opt/bnext/contact-book-api/dist
       - ../../src:/opt/bnext/contact-book-api/src
       - ../../node_modules:/opt/bnext/contact-book-api/node_modules
     networks: 
@@ -19,7 +20,9 @@ services:
       DATABASE_COLLECTION: $DATABASE_COLLECTION
   bnext-contact-database:
     container_name: bnext-contact-database 
-    image: mariadb:10.5.3
+    build: 
+      context: ../..
+      dockerfile: docker/database/mysql/dockerfile
     ports: 
       - 3306:$DATABASE_PORT
     environment:
