--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
@@ -37,6 +38,7 @@
     "class-validator": "^0.12.2",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +53,7 @@
     "@types/hapi__joi": "^17.1.6",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
