Add phone validation with neutrino

--- a/docker/local/.env
+++ b/docker/local/.env
@@ -3,3 +3,5 @@ DATABASE_USER=bnext
 DATABASE_PASSWORD=bnext-1234
 DATABASE_COLLECTION=contact-book
 JWT_SECRET=TheBiggestSecret
+NEUTINOAPI_USER=<user_id>
+NEUTINOAPI_API_KEY=<api-key>
