--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services: 
   bnext-contact-book-api:
     container_name:  bnext-contact-book-api-test
-    command: npm run test:e2e
+    command: ./docker/wait-for-it.sh bnext-contact-database-test:$DATABASE_PORT --timeout=10 -- npm run test:e2e
     volumes: 
       - ../../test:/opt/bnext/contact-book-api/test
     depends_on: 
